// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PactV2 should record a Pact V2 Interactions  1`] = `
{
  "consumer": {
    "name": "consumer",
  },
  "interactions": [
    {
      "description": "Description with special character @/"". $",
      "request": {
        "body": {
          "name": "Todo",
        },
        "method": "POST",
        "path": "v1/todo",
      },
      "response": {
        "body": "This is an interaction with a description",
        "status": 200,
      },
    },
    {
      "description": "GET v1/todo returns status 200",
      "request": {
        "method": "GET",
        "path": "v1/todo",
      },
      "response": {
        "body": "This is an interaction without description",
        "status": 200,
      },
    },
    {
      "description": "This is a description",
      "request": {
        "body": {
          "name": "Todo",
        },
        "method": "POST",
        "path": "v1/todo",
      },
      "response": {
        "body": "This is an interaction with a description",
        "status": 200,
      },
    },
    {
      "description": "This is a same description",
      "request": {
        "method": "GET",
        "path": "v1/todo",
      },
      "response": {
        "body": "This is an interaction with a description",
        "status": 200,
      },
    },
    {
      "description": "This is an interaction with matching rules",
      "request": {
        "body": {
          "name": "Todo",
        },
        "matchingRules": {
          "$.body": {
            "match": "type",
          },
        },
        "method": "POST",
        "path": "v1/todo",
      },
      "response": {
        "body": "This is an interaction with a description",
        "status": 200,
      },
    },
  ],
  "metadata": {
    "pactSpecification": {
      "version": "2.0.0",
    },
  },
  "provider": {
    "name": "provider",
  },
}
`;

exports[`PactV3 should record a Pact V3 Interactions  1`] = `
{
  "consumer": {
    "name": "consumer",
  },
  "interactions": [
    {
      "description": "Description with special character @/"". $",
      "request": {
        "body": {
          "name": "Todo",
        },
        "method": "POST",
        "path": "v1/todo",
      },
      "response": {
        "body": "This is an interaction with a description",
        "status": 200,
      },
    },
    {
      "description": "GET v1/todo returns status 200",
      "request": {
        "method": "GET",
        "path": "v1/todo",
      },
      "response": {
        "body": "This is an interaction without description",
        "status": 200,
      },
    },
    {
      "description": "This is a description",
      "request": {
        "body": {
          "name": "Todo",
        },
        "method": "POST",
        "path": "v1/todo",
      },
      "response": {
        "body": "This is an interaction with a description",
        "status": 200,
      },
    },
    {
      "description": "This is a same description",
      "request": {
        "method": "GET",
        "path": "v1/todo",
      },
      "response": {
        "body": "This is an interaction with a description",
        "status": 200,
      },
    },
    {
      "description": "This is an interaction with matching rules",
      "request": {
        "body": {
          "name": "Todo",
        },
        "matchingRules": {
          "body": {
            "match": "type",
          },
        },
        "method": "POST",
        "path": "v1/todo",
      },
      "response": {
        "body": "This is an interaction with a description",
        "status": 200,
      },
    },
  ],
  "metadata": {
    "pactSpecification": {
      "version": "3.0.0",
    },
  },
  "provider": {
    "name": "provider",
  },
}
`;

exports[`PactV4 should record a Pact V4 Interactions  1`] = `
{
  "consumer": {
    "name": "consumer",
  },
  "interactions": [
    {
      "description": "Description with special character @/"". $",
      "request": {
        "body": {
          "content": {
            "name": "Todo",
          },
          "contentType": "application/json",
        },
        "method": "POST",
        "path": "v1/todo",
      },
      "response": {
        "body": {
          "content": "This is an interaction with a description",
          "contentType": "application/json",
        },
      },
      "type": "Synchronous/HTTP",
    },
    {
      "description": "GET v1/todo returns status 200",
      "request": {
        "method": "GET",
        "path": "v1/todo",
      },
      "response": {
        "body": {
          "content": "This is an interaction without description",
          "contentType": "application/json",
        },
        "status": 200,
      },
    },
    {
      "description": "This is a description",
      "request": {
        "body": {
          "content": {
            "name": "Todo",
          },
          "contentType": "application/json",
        },
        "method": "POST",
        "path": "v1/todo",
      },
      "response": {
        "body": {
          "content": "This is an interaction with a description",
          "contentType": "application/json",
        },
      },
      "type": "Synchronous/HTTP",
    },
    {
      "description": "This is a same description",
      "request": {
        "method": "GET",
        "path": "v1/todo",
      },
      "response": {
        "body": {
          "content": "This is an interaction with a description",
          "contentType": "application/json",
        },
      },
      "type": "Synchronous/HTTP",
    },
    {
      "description": "This is an interaction with matching rules",
      "request": {
        "body": {
          "content": {
            "name": "Todo",
          },
          "contentType": "application/json",
        },
        "matchingRules": {
          "body": {
            "match": "type",
          },
        },
        "method": "POST",
        "path": "v1/todo",
      },
      "response": {
        "body": {
          "content": "This is an interaction with a description",
          "contentType": "application/json",
        },
      },
      "type": "Synchronous/HTTP",
    },
  ],
  "metadata": {
    "pactSpecification": {
      "version": "4.0.0",
    },
  },
  "provider": {
    "name": "provider",
  },
}
`;
